clear comments